Added footer section

--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
     <h1>
         Hello World!
     </h1>
+    
+    <footer>
+        <p>&copy; 2025 My Website</p>
+    </footer>
+    
 </body>
 </html>
